--- a/src/main/webapp/config/file.properties
+++ b/src/main/webapp/config/file.properties
@@ -1,4 +1,5 @@
 ###########File Address#################
 #image.path=D:/Tools/Tomcat/img
 #image.path=C:/DEV/software/Tomcat7.0.88/img
-image.path=C:/DEV/software/Tomcat7.0/img
+#image.path=C:/DEV/software/Tomcat7.0/img
+image.path=D:/Tools/Tomcat/img/user
