--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, Console  
+log4j.rootLogger=DEBUG, Console,File
   
 #Console  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
@@ -10,3 +10,9 @@ log4j.logger.org.apache=INFO
 log4j.logger.java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
+
+#File
+log4j.appender.File = org.apache.log4j.FileAppender
+log4j.appender.File.File = C:/logs/myblog/myblog.log
+log4j.appender.File.layout = org.apache.log4j.PatternLayout
+log4j.appender.File.layout.ConversionPattern =%d [%t] %-5p [%c] - %m%n
